--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.12.1",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
